--- a/WebApplication2/Views/Home/New.cshtml
+++ b/WebApplication2/Views/Home/New.cshtml
@@ -6,31 +6,44 @@
     var reviews = _context.Reviews.OrderByDescending(c => c.Rate)
             .Take(3).ToList();
 }
-<head>
-    <style>
 
-        card-block {
-            font-size: 1em;
-            position: relative;
-            margin: 0;
-            padding: 1em;
-            border: none;
-            border-top: 1px solid rgba(34, 36, 38, .1);
-            box-shadow: none;
-        }
+</style>
 
-        .card {
-            font-size: 1em;
-            overflow: hidden;
-            padding: 5;
-            border: none;
-            border-radius: .28571429rem;
-            box-shadow: 0 1px 3px 0 #d4d4d5, 0 0 0 1px #d4d4d5;
-            margin-top: 20px;
-        }
-    </style>
-</head>
-
+<div class="nn">
+    <div class="course-reviews container">
+        <div class="review-card ">
+            <div class="card-body">
+                <div class="d-flex justify-content-between">
+                    <div class="d-flex">
+                        <div class="user-info">
+                            <strong>Lina</strong>
+                            <span class="text-muted small">3 Month</span>
+                            <div class="stars">★★★★☆</div>
+                        </div>
+                    </div>
+                    <div class="dropdown">
+                        <button class="btn btn-link p-0"
+                                type="button"
+                                id="dropdownMenuButton1"
+                                data-bs-toggle="dropdown"
+                                aria-haspopup="true"
+                                aria-expanded="false">
+                            <i class="fa fa-ellipsis-v"></i>
+                        </button>
+                        <div class="dropdown-menu dropdown-menu-right"
+                             aria-labelledby="dropdownMenuButton1">
+                            <a class="dropdown-item" href="#">Report</a>
+                        </div>
+                    </div>
+                </div>
+                <p>
+                    Class, launched less than a year ago by Blackboard co-founder
+                    Michael Chasen, integrates exclusively...
+                </p>
+            </div>
+        </div>
+    </div>
+</div>
 
     <div class="banner header-text">
         <div class="owl-banner owl-carousel">
