--- a/WebApplication2/Views/Home/New.cshtml
+++ b/WebApplication2/Views/Home/New.cshtml
@@ -7,6 +7,46 @@
             .Take(3).ToList();
 }
 
+<style>
+    .nn {
+        background-color: #f8f8f8;
+        font-family: Arial, sans-serif;
+    }
+
+    .course-reviews {
+        background-color: white;
+        padding: 20px;
+        border-radius: 8px;
+        margin: 20px auto;
+        max-width: 400px;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    }
+
+    .title {
+        color: #f00;
+        font-size: 18px;
+        font-weight: bold;
+    }
+
+    .rating-summary {
+        font-size: 24px;
+        margin-bottom: 10px;
+    }
+
+        .rating-summary .stars {
+            color: #f00;
+        }
+
+
+
+    .review-card {
+        margin-bottom: 10px;
+    }
+
+        .review-card .stars {
+            color: #f00;
+        }
+
 </style>
 
 <div class="nn">
@@ -45,7 +85,7 @@
     </div>
 </div>
 
-    <div class="banner header-text">
+ @*   <div class="banner header-text">
         <div class="owl-banner owl-carousel">
         </div>
     </div>
@@ -175,7 +215,7 @@
 
         </div>
     </div>
-</div> 
+</div>  *@
 
 
 
@@ -570,7 +610,7 @@ f
 </div> *@
 
 
-<div class="container">
+@* <div class="container">
     <div class="row">
     
             <div class="col-md-4">
@@ -621,7 +661,7 @@ f
             </div>
         </div>
     </div>
-</div>
+</div> *@
 
 
 @* <head>
@@ -723,7 +763,7 @@ f
 
 
 
-<div class="best-features about-features">
+@* <div class="best-features about-features">
     <div class="container">
         <div class="row">
 
@@ -752,4 +792,4 @@ f
             </div>
         </div>
     </div>
-</div>
+</div> *@
