--- a/WebApplication2/Views/Course/Details.cshtml
+++ b/WebApplication2/Views/Course/Details.cshtml
@@ -9,6 +9,7 @@
         r.Student,
         r.Rate,
         r.Descritipn,
+        
     }).ToList();
 
 
@@ -318,6 +319,81 @@
                     </div>
 
                     <div class="col-md-9 my-3">
+                        <div class="padding">
+                            <div class="row">
+                                <div class="latest-products">
+                                    <div class="reviews-container">
+                                        @foreach(var items in review)
+                                        {
+                                            <div class="course-reviews">
+                                                <div class="review-card">
+                                                    <div class="card-body">
+                                                        <div class="d-flex justify-content-between">
+                                                            <div class="d-flex">
+                                                                <div class="user-info">
+                                                                    <strong>@items.Student</strong>
+                                                                    <span class="text-muted small">@items.RatingDate.Value.Month </span>
+                                                                    <ul class="stars">
+                                                                        @switch (items.Rate)
+                                                                        {
+                                                                            case 5:
+                                                                                <i class="fa fa-star"></i>
+                                                                                <i class="fa fa-star"></i>
+                                                                                <i class="fa fa-star"></i>
+                                                                                <i class="fa fa-star"></i>
+                                                                                <i class="fa fa-star"></i>
+                                                                                break;
+                                                                            case 4:
+                                                                                <i class="fa fa-star"></i>
+                                                                                <i class="fa fa-star"></i>
+                                                                                <i class="fa fa-star"></i>
+                                                                                <i class="fa fa-star"></i>
+                                                                                break;
+                                                                            case 3:
+                                                                                <i class="fa fa-star"></i>
+                                                                                <i class="fa fa-star"></i>
+                                                                                <i class="fa fa-star"></i>
+                                                                                break;
+                                                                            case 2:
+                                                                                <i class="fa fa-star"></i>
+                                                                                <i class="fa fa-star"></i>
+                                                                                <i class="fa fa-star"></i>
+                                                                                break;
+                                                                            default:
+                                                                                <i class="fa fa-star"></i>
+                                                                                break;
+                                                                        }
+                                                                    </ul>
+                                                                </div>
+                                                            </div>
+                                                            <div class="dropdown">
+                                                                <button class="btn btn-link p-0"
+                                                                        type="button"
+                                                                        id="dropdownMenuButton1"
+                                                                        data-bs-toggle="dropdown"
+                                                                        aria-haspopup="true"
+                                                                        aria-expanded="false">
+                                                                    <i class="fa fa-ellipsis-v"></i>
+                                                                </button>
+                                                                <div class="dropdown-menu dropdown-menu-right"
+                                                                     aria-labelledby="dropdownMenuButton1">
+                                                                    <a class="dropdown-item" asp-controller="report" asp-action="addreport" asp-route-Id="@items.ReviewId">Report</a>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                        <p>@items.Descritipn</p>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        }
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+
+@*                     <div class="col-md-9 my-3">
 
                         <div class="padding">
 
