adding the trigger for AvertageRating

--- a/WebApplication2/Views/Course/Details.cshtml
+++ b/WebApplication2/Views/Course/Details.cshtml
@@ -64,6 +64,7 @@
                             <h6>@Model.TopicsCovered</h6>
                             <div class="down-content">
                                 <span style="left:1px;">(24)</span>
+                                <span style="left:1px;">@Model.AverageRating</span>
                                 <ul class="stars">
                                     <li><i class="fa fa-star"></i></li>
                                     <li><i class="fa fa-star"></i></li>
