--- a/WebApplication2/Views/Course/Details.cshtml
+++ b/WebApplication2/Views/Course/Details.cshtml
@@ -62,8 +62,7 @@
                             <h6>@Model.Language</h6>
                             <h6>@Model.Level</h6>
                             <h6>@Model.TopicsCovered</h6>
-                            <div class="down-content">
-                                <span style="left:1px;">(24)</span>
+                            <div class="down-content ">
                                 <span style="left:1px;">@Model.AverageRating</span>
                                 <ul class="stars">
                                     <li><i class="fa fa-star"></i></li>
@@ -71,9 +70,12 @@
                                     <li><i class="fa fa-star"></i></li>
                                     <li><i class="fa fa-star"></i></li>
                                     <li><i class="fa fa-star"></i></li>
-                                </ul>
+                                    <span class="justify-items-start">(24)  </span>
 
+                                </ul>
                             </div>
+                            
+
                         </div>
 
                         <div class="col-md-2">
