--- a/WebApplication2/Views/Home/Index.cshtml
+++ b/WebApplication2/Views/Home/Index.cshtml
@@ -18,9 +18,9 @@
         padding: 20px;
         border-radius: 4px;
         margin: 10px; /* Adjusted for inner spacing */
-        max-width: calc(50% - 20px); /* Allows 3 cards per row with spacing */
+        max-width: calc(33.333% - 20px); /* Allows 3 cards per row with spacing */
         box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-        flex: 1 1 calc(50% - 20px); /* Allows 3 cards per row */
+        flex: 1 1 calc(33.333% - 20px); /* Allows 3 cards per row */
         box-sizing: border-box;
     }
 
@@ -218,7 +218,7 @@
 <div class="latest-products">
     <div class="container">
         <div class="row">
-<<<<<<< HEAD
+
           <div class="col-md-12">
             <div class="section-heading">
               <h2>Top Courses</h2>
@@ -236,16 +236,24 @@
                             @foreach (var course in courses)
                             {
                                 <div class="course-card">
-                                    <img src="~/images/more-info.jpg" alt="@course.Title" />
+                                @if (@course.Picture is null)
+                                {
+                                    course.Picture = "noimage.png";
+
+                                }<a href="#"><img src="~/images/courses/@course.Picture" alt=""></a>
                                     <h3>@course.Title</h3>
                                     <p>@course.InstructorFullName</p>
-                                    <p>@course.AverageRating <span class="stars">★★★★★</span> (@course.Reviews.Count().ToString()</p>
+                                    <p>@course.AverageRating <span class="stars">★★★★★</span> (@course.Reviews.Count().ToString())</p>
                                     <p></p>
                                     @if (course.PriceStatus is true)
-                                    {
-                                        <button class="bestseller">Free</button>
-                                    }
-                                </div>
+                                {
+                                    <button class="bestseller">Paid</button>
+                                }
+                                else
+                                {
+                                    <button class="bestseller">Free</button>
+                                }
+                            </div>
                             }
                         </div>
                         <button class="arrow next">&#10095;</button>
@@ -316,15 +324,15 @@
 
 
         <!-- Latest Courses starts Here -->
-        <div class="latest-products">
+@*         <div class="latest-products">
           <div class="container">
             <div class="row">
               <div class="col-md-12">
             <div class="col-md-12">
->>>>>>> 963eec44e12dafe7baf7da846c886567dba32822
+
                 <div class="section-heading">
                     <h2>Top Courses</h2>
-                  @*   <a asp-controller="home" asp-action="course">view all courses <i class="fa fa-angle-right"></i></a> *@
+            
                 </div>
             </div>
             @foreach (var items in courses)
@@ -359,11 +367,89 @@
         </div>
     </div>
 </div>
+</div> *@
 
 
+@* <div class="container">
+    <div class="row">
 
+        <div class="padding">
 
-    <div class="container">
+            <div class="latest-products">
+                <div class="reviews-container">
+                    <div class="col-md-12">
+                        <div class="section-heading">
+                            <h2>Reviews</h2>
+       
+                        </div>
+                    </div>
+                    <div class="course-carousel">
+                            <div class="carousel-container">
+                            <button class="arrow prev">&#10094;</button>
+                            <div class="carousel">
+                                @foreach (var review in reviews)
+                                {
+
+                                        <div class="course-reviews">
+                                            <div class="review-card">
+                                                <div class="card-body">
+                                                    <div class="d-flex justify-content-between">
+                                                        <div class="d-flex">
+                                                            <div class="user-info">
+                                                                <strong>@review.Student</strong>
+                                                                <span class="text-muted small">@review.GetFormattedDate(review.RatingDate.Value) </span>
+                                                                <ul class="stars">
+                                                                    @switch (review.Rate)
+                                                                    {
+                                                                        case 5:
+                                                                            <i class="fa fa-star"></i>
+                                                                            <i class="fa fa-star"></i>
+                                                                            <i class="fa fa-star"></i>
+                                                                            <i class="fa fa-star"></i>
+                                                                            <i class="fa fa-star"></i>
+                                                                            break;
+                                                                        case 4:
+                                                                            <i class="fa fa-star"></i>
+                                                                            <i class="fa fa-star"></i>
+                                                                            <i class="fa fa-star"></i>
+                                                                            <i class="fa fa-star"></i>
+                                                                            break;
+                                                                        case 3:
+                                                                            <i class="fa fa-star"></i>
+                                                                            <i class="fa fa-star"></i>
+                                                                            <i class="fa fa-star"></i>
+                                                                            break;
+                                                                        case 2:
+                                                                            <i class="fa fa-star"></i>
+                                                                            <i class="fa fa-star"></i>
+                                                                            <i class="fa fa-star"></i>
+                                                                            break;
+                                                                        default:
+                                                                            <i class="fa fa-star"></i>
+                                                                            break;
+                                                                    }
+                                                                </ul>
+                                                            </div>
+                                                        </div>
+
+                                                    </div>
+                                                    <p>@review.Descritipn</p>
+                                                </div>
+                                            </div>
+                                        </div>
+
+                
+                                }
+                            </div>
+                            <button class="arrow next">&#10095;</button>
+                        </div>
+                    </div>
+
+</div>
+</div> </div>
+</div>
+</div> *@
+   <div class="container">
         <div class="row">
 
             <div class="padding">
@@ -373,80 +459,75 @@
                         <div class="col-md-12">
                             <div class="section-heading">
                                 <h2>Reviews</h2>
-                                @*   <a asp-controller="home" asp-action="course">view all courses <i class="fa fa-angle-right"></i></a> *@
+                             
                             </div>
                         </div>
-                        @foreach (var items in reviews)
-                        {
-                            <div class="course-reviews">
-                                <div class="review-card">
-                                    <div class="card-body">
-                                        <div class="d-flex justify-content-between">
-                                            <div class="d-flex">
-                                                <div class="user-info">
-                                                    <strong>@items.Student</strong>
-                                                    <span class="text-muted small">@items.RatingDate.Value.Month </span>
-                                                    <ul class="stars">
-                                                        @switch (items.Rate)
-                                                        {
-                                                            case 5:
-                                                                <i class="fa fa-star"></i>
-                                                                <i class="fa fa-star"></i>
-                                                                <i class="fa fa-star"></i>
-                                                                <i class="fa fa-star"></i>
-                                                                <i class="fa fa-star"></i>
-                                                                break;
-                                                            case 4:
-                                                                <i class="fa fa-star"></i>
-                                                                <i class="fa fa-star"></i>
-                                                                <i class="fa fa-star"></i>
-                                                                <i class="fa fa-star"></i>
-                                                                break;
-                                                            case 3:
-                                                                <i class="fa fa-star"></i>
-                                                                <i class="fa fa-star"></i>
-                                                                <i class="fa fa-star"></i>
-                                                                break;
-                                                            case 2:
-                                                                <i class="fa fa-star"></i>
-                                                                <i class="fa fa-star"></i>
-                                                                <i class="fa fa-star"></i>
-                                                                break;
-                                                            default:
-                                                                <i class="fa fa-star"></i>
-                                                                break;
-                                                        }
-                                                    </ul>
-                                                </div>
+                    @foreach (var review in reviews)
+                    {
+
+                        <div class="course-reviews">
+                            <div class="review-card">
+                                <div class="card-body">
+                                    <div class="d-flex justify-content-between">
+                                        <div class="d-flex">
+                                            <div class="user-info">
+                                                <strong>@review.Student</strong>
+                                                <span class="text-muted small">@review.GetFormattedDate(review.RatingDate.Value) </span>
+                                                <ul class="stars">
+                                                    @switch (review.Rate)
+                                                    {
+                                                        case 5:
+                                                            <i class="fa fa-star"></i>
+                                                            <i class="fa fa-star"></i>
+                                                            <i class="fa fa-star"></i>
+                                                            <i class="fa fa-star"></i>
+                                                            <i class="fa fa-star"></i>
+                                                            break;
+                                                        case 4:
+                                                            <i class="fa fa-star"></i>
+                                                            <i class="fa fa-star"></i>
+                                                            <i class="fa fa-star"></i>
+                                                            <i class="fa fa-star"></i>
+                                                            break;
+                                                        case 3:
+                                                            <i class="fa fa-star"></i>
+                                                            <i class="fa fa-star"></i>
+                                                            <i class="fa fa-star"></i>
+                                                            break;
+                                                        case 2:
+                                                            <i class="fa fa-star"></i>
+                                                            <i class="fa fa-star"></i>
+                                                            <i class="fa fa-star"></i>
+                                                            break;
+                                                        default:
+                                                            <i class="fa fa-star"></i>
+                                                            break;
+                                                    }
+                                                </ul>
                                             </div>
-                                            @*                                                             <div class="dropdown">
-                                        <button class="btn btn-link p-0"
-                                        type="button"
-                                        id="dropdownMenuButton1"
-                                        data-bs-toggle="dropdown"
-                                        aria-haspopup="true"
-                                        aria-expanded="false">
-                                        <i class="fa fa-ellipsis-v"></i>
-                                        </button>
-                                        <div class="dropdown-menu dropdown-menu-right"
-                                        aria-labelledby="dropdownMenuButton1">
-                                        <a class="dropdown-item" asp-controller="report" asp-action="addreport" asp-route-Id="@items.ReviewId">Report</a>
                                         </div>
-                                        </div> *@
-                                        </div>
-                                        <p>@items.Descritipn</p>
+
                                     </div>
+                                    <p>@review.Descritipn</p>
                                 </div>
                             </div>
-                        }
+                        </div>
+
+
+                    }
                     </div>
                 </div>
             </div>
 
         </div>
-    </div>
+    </div> 
 
 
+
+
+
+
+    
 @* <div class="latest-products">
     <div class="container">
         <div class="row">
@@ -611,5 +692,5 @@
  
 
 @* </html> *@
-=======
->>>>>>> 963eec44e12dafe7baf7da846c886567dba32822
+
+
