--- a/WebApplication2/Views/Student/Index.cshtml
+++ b/WebApplication2/Views/Student/Index.cshtml
@@ -21,9 +21,9 @@
     padding: 20px;
     border-radius: 4px;
     margin: 10px; /* Adjusted for inner spacing */
-    max-width: calc(50% - 20px); /* Allows 3 cards per row with spacing */
+    max-width: calc(33.333% - 20px); /* Allows 3 cards per row with spacing */
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    flex: 1 1 calc(50% - 20px); /* Allows 3 cards per row */
+    flex: 1 1 calc(33.333% - 20px); /* Allows 3 cards per row */
     box-sizing: border-box;
 }
 
@@ -226,7 +226,7 @@
                                         <div class="d-flex">
                                             <div class="user-info">
                                                 <strong>@items.Student</strong>
-                                                <span class="text-muted small">@items.RatingDate.Value.Month </span>
+                                                <span class="text-muted small">@items.GetFormattedDate(items.RatingDate.Value)  </span>
                                                 <ul class="stars">
                                                     @switch (items.Rate)
                                                     {
